kubesphere/workspace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: hello
    kubesphere.io/namespace: hello
    kubesphere.io/workspace: fls-abc
  name: hello
